# cart-bot

./: .gitignore  README.md  secrets.env.example
.github/workflows/: cad.yml
cad/: README.md
cad/openscad/: cable-clip.scad  chassis-plate.scad  params.scad  tt-motor-bracket.scad
cad/reports/: tt-mount-chassis-1.toml  tt-mount-chassis-1.txt  tt-mount-chassis-2.toml  tt-mount-chassis-2.txt
cad/step/: tt-mount-chassis-1.meta.toml  tt-mount-chassis-1.step  tt-mount-chassis-2.meta.toml  tt-mount-chassis-2.step
cad/stl/: cable-clip.stl  chassis-plate.stl  onshape-chassis-and-tt-mounts.stl  tt-motor-bracket.stl  tt-mount-chassis-1.stl  tt-mount-chassis-2.stl
docs/: devlog.md  project-brief.md
docs/design/: chassis-rev1-to-rev2.md
docs/kitchen-tester/: build-guide.md  test-plan.md  tracker-quickref.md  wiring.md
docs/production/: roadmap.md  tracker-setup.md
firmware/: load_secrets.py  platformio.ini
firmware/lib/dancescript/: dancescript.cpp  dancescript.h
firmware/lib/heading/: heading.cpp  heading.h
firmware/lib/kinematics/: kinematics.cpp  kinematics.h
hardware/: bom.md
tools/cadlab/: pyproject.toml
tools/cadlab/src/cadlab/: __init__.py  build.py  cli.py  diff.py  inspect.py  render.py
tools/cadlab/tests/: conftest.py  test_cadlab.py
tools/tracker/: pyproject.toml
tools/tracker/config/: quarters.yaml  room.yaml  square.yaml
tools/tracker/src/tracker/: __init__.py  camera.py  cli.py  config.py  controller.py  detect.py  homography.py  markers.py  robot.py  viz.py
tools/tracker/tests/: test_controller.py  test_homography.py
(+32 files in other folders)
