[project]
name = "cadlab"
version = "0.1.0"
description = "CAD revision tracking for cart-bot — ported from jmcpheron/pycon2026 cardlab"
requires-python = ">=3.11,<3.13"
dependencies = [
    "click>=8",
    # Both pinned exactly (lesson from the pycon2026 repo): OCCT's STL float
    # formatting drifts between versions, which would churn every
    # auto-committed STL on unrelated dependency bumps.
    "build123d==0.11.1",
    "cadquery-ocp-novtk==7.9.3.1.1",
]

[project.scripts]
cadlab = "cadlab.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cadlab"]
