[project]
name = "tracker"
version = "0.1.0"
description = "Overhead-camera ArUco tracking + closed-loop waypoint control for cart-bot"
requires-python = ">=3.11"
dependencies = [
    "click>=8",
    "numpy>=1.26",
    "opencv-contrib-python>=4.9",
    "pillow>=10",       # PNG DPI metadata so markers print at true size
    "pyyaml>=6",
    "requests>=2.31",
]

[project.scripts]
tracker = "tracker.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracker"]
